2021-09-02  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK][WPE] Port API test runner to python3 (v2)
        https://bugs.webkit.org/show_bug.cgi?id=229782

        Unreviewed follow-up fix after r281919

        Remove change on the shebang of run-perf-tests that doesn't belong to this patch,
        not sure how this ended here, seems I messed it when working on the patch for bug 229783

        * Scripts/run-perf-tests:

2021-09-02  Aakash Jain  <aakash_jain@apple.com>

        Move few scripts from python 2 to python3
        https://bugs.webkit.org/show_bug.cgi?id=229817

        Reviewed by Jonathan Bedard.

        * Scripts/clean-webkit: Changed shebang to python3.
        * CISupport/test-result-archive: Ditto.
        * CISupport/ews-build/steps.py: Ditto.
        * CISupport/build-webkit-org/steps.py:
        (DownloadBuiltProduct): Use python 3 instead of python 2.
        (ArchiveTestResults): Ditto.
        * CISupport/download-built-product: Ditto.
        (CleanWorkingDirectory):
        (DownloadBuiltProduct):
        (ArchiveTestResults):
        * CISupport/ews-build/steps_unittest.py: Updated unit-tests.

2021-09-02  Jonathan Bedard  <jbedard@apple.com>

        [contributors.json] Relocation (Part 5)
        https://bugs.webkit.org/show_bug.cgi?id=229690
        <rdar://problem/82552403>

        Reviewed by Aakash Jain.

        * CISupport/ews-build/steps.py:
        (ValidateCommiterAndReviewer): Pull from metadata/contributors.json.
        (ValidateCommiterAndReviewer.load_contributors_from_disk): Ditto.
        (ValidateCommiterAndReviewer.load_contributors): Parse contributors.json as list instead of dictionary.
        * CISupport/ews-build/steps_unittest.py:

2021-09-02  Lauro Moura  <lmoura@igalia.com>

        [webkitcorepy] Evaluate default Editor to false when not found
        https://bugs.webkit.org/show_bug.cgi?id=229791

        Reviewed by Jonathan Bedard.
